# unthinkclaw

./: .env.example  .gitignore  AGENTS.md  CARGO_AUDIT.md  CLAUDE.md  Cargo.toml  FEATURES_GUIDE.md  FEATURE_PARITY_AUDIT.md  FEATURE_PORT_SPEC.md  PRODUCTION_RELEASE.md  README.md  SECURITY_AUDIT.md
.claude/: launch.json
.unthinkclaw/: cron.db  memory.db-shm  memory.db-wal
docs/: README.md
scripts/: watch.sh
src/: claw_adapter.rs  cost.rs  cron_scheduler.rs  diagnostics.rs  heartbeat.rs  lib.rs  main.rs  mcp.rs  plugin.rs  prompt.rs  scheduler.rs  skills.rs  swarm.rs
src/agent/: loop_runner.rs  mod.rs  streaming.rs
src/channels/: cli.rs  discord.rs  mod.rs  telegram.rs
src/config/: mod.rs
src/gateway/: mod.rs  server.rs
src/hosted/: mod.rs
src/memory/: mod.rs  search.rs  sqlite.rs  surreal.rs  traits.rs
src/providers/: anthropic.rs  mod.rs  oauth.rs
src/runtime/: mod.rs
src/tools/: agent_browser.rs  browser.rs  dynamic.rs  edit.rs  file_ops.rs  mcp.rs  mod.rs  shell.rs  web_fetch.rs
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/hub/plan/: route.ts
web/app/hub/: page.tsx
web/app/live/: page.tsx
web/components/: HubClient.tsx  LandingPage.tsx  SurfaceRenderer.tsx  widgets.tsx
web/components/__tests__/: HubClient.test.tsx  LandingPage.test.tsx  SurfaceRenderer.test.tsx
web/lib/: gateway.ts  types.ts
web/lib/__tests__/: gateway.test.ts
