[package]
name = "aclaw"
version = "0.1.0"
edition = "2021"
description = "Lightweight agent runtime — successor to OpenClaw. Best of ZeroClaw, NanoClaw, HiClaw."
license = "MIT"
repository = "https://github.com/undivisible/aclaw"

[[bin]]
name = "aclaw"
path = "src/main.rs"

[dependencies]
# Async runtime (optimized features only)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs", "signal", "process", "io-std"] }
async-trait = "0.1"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client + server (no unused features)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = { version = "0.7", features = ["ws"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Logging (lightweight)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# UUID + Time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database (SQLite for memory/state)
rusqlite = { version = "0.30", features = ["bundled"] }

# Container management
bollard = "0.18"
shlex = "1.3"

# Crypto (credential security)
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"

# Faster synchronization primitives
parking_lot = "0.12"

# Scheduling (Phase 4: cron)
cron = "0.12"

# Home directory resolution
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit
strip = true        # Strip symbols
panic = "abort"     # No unwind tables

