[package]
name = "unthinkclaw"
version = "0.1.0"
edition = "2021"
description = "Lightweight agent runtime — unthink everything."
license = "MIT"
repository = "https://github.com/undivisible/unthinkclaw"

[[bin]]
name = "unthinkclaw"
path = "src/main.rs"

[features]
default = ["core", "channel-cli", "channel-telegram", "provider-anthropic", "swarm"]

# Core (always needed)
core = []

# Channels — pick what you need
channel-cli = []
channel-telegram = []
channel-discord = []
channel-slack = []
channel-whatsapp = []
channel-signal = []
channel-matrix = []
channel-irc = []
channel-googlechat = []
channel-msteams = []

# Providers — pick what you need
provider-anthropic = []
provider-openai = []
provider-copilot = []
provider-ollama = []
provider-openrouter = []
provider-groq = []
provider-together = []
provider-mistral = []
provider-deepseek = []
provider-fireworks = []
provider-perplexity = []
provider-xai = []
provider-moonshot = []
provider-venice = []
provider-huggingface = []
provider-siliconflow = []
provider-cerebras = []
provider-minimax = []
provider-vercel = []
provider-cloudflare = []

# Docker container isolation (pulls in bollard)
docker = ["dep:bollard"]

# Swarm mode (SurrealDB + RocksDB for distributed agents)
swarm = ["dep:surrealdb", "dep:rocksdb"]

# Bundles
all-channels = ["channel-cli", "channel-telegram", "channel-discord", "channel-slack", "channel-whatsapp", "channel-signal", "channel-matrix", "channel-irc", "channel-googlechat", "channel-msteams"]
all-providers = ["provider-anthropic", "provider-openai", "provider-copilot", "provider-ollama", "provider-openrouter", "provider-groq", "provider-together", "provider-mistral", "provider-deepseek", "provider-fireworks", "provider-perplexity", "provider-xai", "provider-moonshot", "provider-venice", "provider-huggingface", "provider-siliconflow", "provider-cerebras", "provider-minimax", "provider-vercel", "provider-cloudflare"]
full = ["all-channels", "all-providers", "docker"]

[dependencies]
# Async runtime (optimized features only)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs", "signal", "process", "io-std"] }
async-trait = "0.1"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client + server (no unused features)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = { version = "0.7", features = ["ws"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Logging (lightweight)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# UUID + Time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database (SQLite for memory/state)
rusqlite = { version = "0.30", features = ["bundled"] }

# Embedded SurrealDB + RocksDB (optional for swarm mode)
surrealdb = { version = "2", features = ["kv-rocksdb"], optional = true }
rocksdb = { version = "0.22", optional = true }

# Container management (optional — only if you need Docker isolation)
bollard = { version = "0.18", optional = true }
shlex = "1.3"

# Crypto (credential security)
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"

# Faster synchronization primitives
parking_lot = "0.12"

# File system watcher (hot reload for tools/skills/memory)
notify = { version = "6", features = ["serde"] }

# Scheduling (Phase 4: cron)
cron = "0.12"

# Home directory resolution
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit
strip = true        # Strip symbols
panic = "abort"     # No unwind tables
